--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,44 @@
-
-
 body {
     font-family: 'Open Sans', sans-serif;
-    text-align: center;
+    text-align: left;}
+
+h1 {
+    font-size: 50px;
+    font-weight: 600;
+    color: #192b59;
+a { text-decoration: none;} 
 }
+.nav {
+    font-size: 12px;
+    color: #6e7ea9;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.btn-free {
+    color: brown;
+    font-weight: 400;
+    background-color: darkblue;
+    
+}
+h3 {
+    font-size: 40px;
+    color: #192b59;
+    font-weight: 400;
+}
+.fetur {
+    font-size: 12px;
+    font-weight: 400;
+    color: #1085e4;
+    text-transform: uppercase;
+}
+.read {
+    font-size: 14px;
+    font-weight: 400;
+    color: #1085e4
+}
+p {
+    font-size: 16px;
+    color: #7581a1;
+    font-weight: 400;
+}
+7581a1
